<resources>
    <string name="app_name" translatable="false">Mushroom Detective</string>
    <string name="cap_shape_label">Cap Shape:</string>
    <string name="cap_color_label">Cap Color:</string>
    <string name="stem_width_label">Stem Width:</string>
    <string name="submit_label">Submit</string>
    <string name="camera_button_label">Photo</string>
    <string name="error_text">Please complete all required fields</string>
    <string name="home" translatable="false">Home</string>
    <string name="library">Library</string>
    <string name="mode">Light/Dark</string>
    <string name="archive">Archive</string>
    <string name="dark_mode">Dark mode</string>
    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>
    <string name="mushroom_poisonous">This mushroom is poisonous!</string>
    <string name="mushroom_edible">This mushroom is edible.</string>
    <string-array translatable="false" name="cap_diameter">
        <item>0.25</item>
        <item>0.50</item>
        <item>0.75</item>
        <item>1.00</item>
        <item>1.25</item>
        <item>1.50</item>
        <item>1.75</item>
        <item>2.00</item>
        <item>2.25</item>
        <item>2.50</item>
        <item>2.75</item>
        <item>3.00</item>
        <item>3.25</item>
        <item>3.50</item>
        <item>3.75</item>
        <item>4.00</item>
        <item>4.25</item>
        <item>4.50</item>
        <item>4.75</item>
        <item>5.00</item>
        <item>5.25</item>
        <item>5.50</item>
        <item>5.75</item>
        <item>6.00</item>
        <item>6.25</item>
        <item>6.50</item>
        <item>6.75</item>
        <item>7.00</item>
        <item>7.25</item>
        <item>7.50</item>
        <item>7.75</item>
        <item>8.00</item>
        <item>8.25</item>
        <item>8.50</item>
        <item>8.75</item>
        <item>9.00</item>
        <item>9.25</item>
        <item>9.50</item>
        <item>9.75</item>
        <item>10.00</item>
        <item>10.25</item>
        <item>10.50</item>
        <item>10.75</item>
        <item>11.00</item>
        <item>11.25</item>
        <item>11.50</item>
        <item>11.75</item>
        <item>12.00</item>
        <item>12.25</item>
        <item>12.50</item>
        <item>12.75</item>
        <item>13.00</item>
        <item>13.25</item>
        <item>13.50</item>
        <item>13.75</item>
        <item>14.00</item>
        <item>14.25</item>
        <item>14.50</item>
        <item>14.75</item>
        <item>15.00</item>
        <item>15.25</item>
        <item>15.50</item>
        <item>15.75</item>
        <item>16.00</item>
        <item>16.25</item>
        <item>16.50</item>
        <item>16.75</item>
        <item>17.00</item>
        <item>17.25</item>
        <item>17.50</item>
        <item>17.75</item>
        <item>18.00</item>
        <item>18.25</item>
        <item>18.50</item>
        <item>18.75</item>
        <item>19.00</item>
        <item>19.25</item>
        <item>19.50</item>
        <item>19.75</item>
        <item>20.00</item>
    </string-array>
    <string-array translatable="false" name="cap_shape">
        <item>B</item>
        <item>C</item>
        <item>F</item>
        <item>O</item>
        <item>P</item>
        <item>S</item>
        <item>X</item>
    </string-array>
    <string-array translatable="false" name="cap_color">
        <item>D</item>
        <item>E</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>K</item>
        <item>L</item>
        <item>S</item>
        <item>T</item>
        <item>W</item>
        <item>Y</item>
    </string-array>
    <string name="cap_diameter_label">Cap Diameter:</string>
</resources>