<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- Captured image -->
    <ImageView
        android:id="@+id/capturedImage"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:src="@drawable/image_placeholder"
        app:layout_constraintBottom_toTopOf="@id/cameraButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Camera button -->
    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/camera_button_label"
        app:layout_constraintBottom_toTopOf="@+id/textCapDiameter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Spinner1 - Cap diameter -->
    <TextView
        android:id="@+id/textCapDiameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cap_diameter_label"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/spinner1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#CCCCCC"
        android:dropDownWidth="150dp"
        android:gravity="center"
        android:minWidth="150dp"
        android:minHeight="30dp"
        app:layout_constraintBottom_toTopOf="@id/textCapShape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Spinner2 - Cap shape -->
    <TextView
        android:id="@+id/textCapShape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cap_shape_label"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#CCCCCC"
        android:dropDownWidth="150dp"
        android:gravity="center"
        android:minWidth="150dp"
        android:minHeight="30dp"
        app:layout_constraintBottom_toTopOf="@id/textCapColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Spinner3 - Cap surface -->
    <TextView
        android:id="@+id/textCapColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cap_color_label"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/spinner3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#CCCCCC"
        android:dropDownWidth="150dp"
        android:gravity="center"
        android:minWidth="150dp"
        android:minHeight="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textStemWidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Spinner4 - Stem Width -->
    <TextView
        android:id="@+id/textStemWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stem_width_label"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/spinner4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#CCCCCC"
        android:dropDownWidth="150dp"
        android:gravity="center"
        android:minWidth="150dp"
        android:minHeight="30dp"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/submitButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit_label"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
